{
    "name": "GameInput",
    "maps": [
        {
            "name": "Controller",
            "id": "df0f298a-596a-4dbd-94a6-11715a9d3d6a",
            "actions": [
                {
                    "name": "LeftSecondaryButton",
                    "type": "Button",
                    "id": "20f02920-e856-4473-9550-41654af078ce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightSecondaryButton",
                    "type": "Button",
                    "id": "7efcf817-e7ca-4d73-b481-0d5ecc86040c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftPrimaryButton",
                    "type": "Button",
                    "id": "5cdba481-a85e-44f1-b226-b976fc517bf5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightPrimaryButton",
                    "type": "Button",
                    "id": "85da19c8-280d-4fdd-9c23-425e9bd44529",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MenuButton",
                    "type": "Button",
                    "id": "41491d98-36fa-4326-8a5a-150e5b89644f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6a6ffda2-d117-460a-ab90-1ac88284d393",
                    "path": "<PXR_Controller>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftSecondaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "564c43db-965a-4aa9-a460-e07fc3a308d3",
                    "path": "<XRSimulatedController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftSecondaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd1d224e-39fb-4c7f-a84f-9cd17b618a10",
                    "path": "*/{MenuButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MenuButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44e8fa78-d8e3-45ae-a722-c2ad88e7e805",
                    "path": "<PXR_Controller>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftPrimaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0980fa96-98a6-4e8e-a2a2-e01f641e4c0e",
                    "path": "<XRSimulatedController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftPrimaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0eac659c-7b93-42f7-b2c8-6580a9d1b014",
                    "path": "<PXR_Controller>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightSecondaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a1fdff0-d2ca-4c2a-969b-b5f29eb89c21",
                    "path": "<XRSimulatedController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightSecondaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55b72cbc-3e81-4cd0-8d17-4d684736f1a2",
                    "path": "<PXR_Controller>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightPrimaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6499c091-e54c-4c0a-92d1-e5dc7834b11d",
                    "path": "<XRSimulatedController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightPrimaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}